--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apollo-server": "^3.10.0",
+    "apollo-server-micro": "^3.10.0",
+    "graphql": "^15.8.0",
+    "micro-cors": "^0.1.1",
     "next": "12.2.3",
+    "nexus": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "18.6.1",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
 }
