--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build:nexus-typegen": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only schema",
+    "build": "npm run build:nexus-typegen && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,15 +13,17 @@
     "apollo-server": "^3.10.0",
     "apollo-server-micro": "^3.10.0",
     "graphql": "^15.8.0",
+    "graphql-request": "^4.3.0",
     "micro-cors": "^0.1.1",
     "next": "12.2.3",
     "nexus": "^1.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@types/micro-cors": "^0.1.2",
-    "@types/node": "18.6.1",
+    "@types/node": "^18.6.1",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
